changed about me to index file

--- a/alt-form.html
+++ b/alt-form.html
@@ -26,7 +26,7 @@
         <nav>
           <ul>
             <li>
-              <a href="/about.html">Home</a>
+              <a href="/index.html">Home</a>
             </li>
             <li>
               <a href="/alt-courses.html">Courses</a>
