--- a/media.html
+++ b/media.html
@@ -28,7 +28,7 @@
         <nav>
           <ul>
             <li>
-              <a href="/about.html">Home</a>
+              <a href="/index.html">Home</a>
             </li>
             <li>
               <a href="/alt-form.html">Form</a>
