index css change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
     />
 
-    <link rel="stylesheet" href="/styles/about.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
 
     <title>about me</title>
   </head>
@@ -40,7 +40,7 @@
       <section class="quote-section">
         <p class="quote">
           "Since we cannot change reality <br />
-          let us change <br>the eyes which see reality."
+          let us change <br />the eyes which see reality."
         </p>
       </section>
 
@@ -143,7 +143,7 @@
         <nav class="back-to-top">
           <ul>
             <li>
-                <a href="#about-me-section" class="button">Back to the top</a>
+              <a href="#about-me-section" class="button">Back to the top</a>
             </li>
           </ul>
         </nav>
