--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <!-- quote section -->
       <section class="quote-section">
         <p class="quote">
-          "Since we cannot change reality <br />
-          let us change <br />the eyes which see reality."
+          "Since we cannot <span>change reality</span><br />
+          let us <span>change <br />the eyes which see reality</span>."
         </p>
       </section>
 
