satisfied with all changes

--- a/alt-courses.html
+++ b/alt-courses.html
@@ -45,16 +45,9 @@
     <main>
       <!--container for  h1-image-container and side-note-->
       <div class="major">
-        <!-- container for h1 and image -->
-        <div class="h1-image-container">
-          <h1>AltSchool Africa and it's Schools</h1>
-          <div class="img-contain">
-            <img src="/assets/pictures/signup-img.png" alt="" />
-          </div>
-        </div>
-
         <!-- container for h4 and note-->
         <section class="side-note">
+          <h1>AltSchool Africa and it's Schools</h1>
           <h4>What is Altschool Africa?</h4>
           <p>
             AltSchool Africa is a digital and virtual <br />learning platform
@@ -74,45 +67,87 @@
           </caption>
           <thead>
             <tr>
-              <th class="sch">SCHOOLS</th>
+              <th>SCHOOLS</th>
               <th>COURSES</th>
             </tr>
           </thead>
+
           <tbody>
             <tr>
-              <td class="sch">Engineering</td>
-              <td>Front-End Engineering.</td>
-              <td>Back-End Engineering.</td>
-              <td>Cloud Engineering.</td>
-              <td>Cybersecurity.</td>
+              <td class="engine" rowspan="5">Engineering</td>
             </tr>
+            <div class="sch">
+              <tr>
+                <td>Front-End Engineering.</td>
+              </tr>
+              <tr>
+                <td>Back-End Engineering.</td>
+              </tr>
+              <tr>
+                <td>Cloud Engineering.</td>
+              </tr>
+              <tr>
+                <td>Cybersecurity.</td>
+              </tr>
+            </div>
 
             <tr>
-              <td class="sch">Product</td>
-              <td>Product Design.</td>
-              <td>Product Marketing.</td>
-              <td>Product Management.</td>
+              <td class="engine" rowspan="4">Product</td>
             </tr>
-            <tr>
-              <td class="sch">Data</td>
-              <td>Data Analysis.</td>
-              <td>Data Science.</td>
-              <td>Data Engineering.</td>
-            </tr>
+            <div class="sch">
+              <tr>
+                <td>Product Design.</td>
+              </tr>
+              <tr>
+                <td>Product Marketing.</td>
+              </tr>
+              <tr>
+                <td>Product Management.</td>
+              </tr>
+            </div>
 
-            <tr>
-              <td class="sch">Business</td>
-              <td>High-Impact Selling: From Prospecting to Closing.</td>
-              <td>Digital Marketing.</td>
-            </tr>
+            <div class="sch">
+              <tr>
+                <td class="engine" rowspan="4">Data</td>
+              </tr>
 
-            <tr>
-              <td class="sch">Creative economy</td>
-              <td>
-                Navigating the Music Business in Africa: Afrobeats case study.
-              </td>
-              <td>Content Mastery for African Creators.</td>
-            </tr>
+              <tr>
+                <td>Data Analysis.</td>
+              </tr>
+              <tr>
+                <td>Data Science.</td>
+              </tr>
+              <tr>
+                <td>Data Engineering.</td>
+              </tr>
+            </div>
+
+            <div class="sch">
+              <tr>
+                <td class="engine" rowspan="3">Business</td>
+              </tr>
+
+              <tr>
+                <td>High-Impact Selling: From Prospecting to Closing.</td>
+              </tr>
+              <tr>
+                <td>Digital Marketing.</td>
+              </tr>
+            </div>
+
+            <div class="sch">
+              <tr>
+                <td class="engine" rowspan="3">Creative economy</td>
+              </tr>
+              <tr>
+                <td>
+                  Navigating the Music Business in Africa: Afrobeats case study.
+                </td>
+              </tr>
+              <tr>
+                <td>Content Mastery for African Creators.</td>
+              </tr>
+            </div>
           </tbody>
         </table>
       </div>
