--- a/alt-form.html
+++ b/alt-form.html
@@ -46,7 +46,7 @@
 
         <div class="content-box">
           <img src="/assets/pictures/signup-img.png" alt="" />
-          <p>Learn highly sought after skills without hassle.</p>
+          <h3>Learn highly sought after skills without hassle.</h3>
         </div>
         <footer>
           <div class="icons">
@@ -62,6 +62,9 @@
 
       <!-- ------------------------------signup section section-->
       <section class="sign-up-section">
+        <div class="alt-logo">
+          <img src="/assets/pictures/alt-school-logo.png" alt="" />
+        </div>
         <p class="section-p">
           Already an AltSchooler? <span><a href="">Sign In!</a></span>
         </p>
@@ -103,7 +106,7 @@
               <!-- gender -->
               <div class="twins">
                 <label for="gender">Gender</label>
-                <select name="" id="">
+                <select title="select gender" name="" id="">
                   <option value="" disabled selected>Select gender</option>
                   <option value="">male</option>
                   <option value="">female</option>
@@ -112,7 +115,7 @@
               <!-- dob -->
               <div class="twins">
                 <label for="date of birth">Date of Birth</label>
-                <input type="date" name="" id="" />
+                <input type="date" placeholder="date" name="" id="" />
               </div>
             </div>
 
@@ -365,7 +368,7 @@
                 <label for="How did you hear about us"
                   >How did you hear about us?</label
                 >
-                <select name="" id="hear-about-us">
+                <select title="hear-about-us" name="" id="hear-about-us">
                   <option value="Select channel">Select channel</option>
                   <option value="twitter">Twitter</option>
                   <option value="facebook">Facebook</option>
@@ -387,7 +390,7 @@
               <div class="twins">
                 <label for="password">Password</label>
                 <div class="password-view">
-                  <span>
+                  <span class="eye1">
                     <i class="fa-regular fa-eye-slash"></i>
                   </span>
                   <input
@@ -405,7 +408,7 @@
               <div class="twins">
                 <label for="confirm password">Confirm Password</label>
                 <div class="password-view">
-                  <span>
+                  <span class="eye2">
                     <i class="fa-regular fa-eye-slash"></i>
                   </span>
                   <input
@@ -427,13 +430,13 @@
             </h4>
             <div id="submit-btn">
               <input type="submit" value="Submit" />
-              <span>
-                <i class="fa-solid fa-arrow-right"></i>
-              </span>
             </div>
           </form>
         </div>
       </section>
     </main>
+    <footer>
+      <span>&copy; 2024, Ebenezer Tiewei.</span>
+    </footer>
   </body>
 </html>
