--- a/media.html
+++ b/media.html
@@ -102,8 +102,8 @@
         <p>Iframe: Upcoming movies</p>
 
         <iframe
-          width="560"
-          height="315"
+          width=""
+          height=""
           src="https://www.youtube.com/embed/RrRSWAmgAF8?si=9UJYBF2M7IHv2UqB"
           title="YouTube video player"
           frameborder="0"
