--- a/alt-form.html
+++ b/alt-form.html
@@ -435,7 +435,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="foot">
       <span>&copy; 2024, Ebenezer Tiewei.</span>
     </footer>
   </body>
