--- a/alt-form.html
+++ b/alt-form.html
@@ -112,10 +112,11 @@
                   <option value="">female</option>
                 </select>
               </div>
-              <!-- dob -->
+
+              <!-- date of birth -->
               <div class="twins">
                 <label for="date of birth">Date of Birth</label>
-                <input type="date" placeholder="date" name="" id="" />
+                <input type="date" name="" id="" />
               </div>
             </div>
 
