form input change

--- a/alt-form.html
+++ b/alt-form.html
@@ -116,7 +116,7 @@
               <!-- date of birth -->
               <div class="twins">
                 <label for="date of birth">Date of Birth</label>
-                <input type="date" name="" id="" />
+                <input type="date" name="" id="date of birth" />
               </div>
             </div>
 
