github issues with / styles

--- a/alt-form.html
+++ b/alt-form.html
@@ -14,7 +14,7 @@
       type="image/x-icon"
     />
 
-    <link rel="stylesheet" href="/styles/alt-form.css" />
+    <link rel="stylesheet" href="styles/alt-form.css" />
 
     <title>AltSchool form</title>
   </head>
