--- a/alt-courses.html
+++ b/alt-courses.html
@@ -16,7 +16,7 @@
       type="image/x-icon"
     />
     <!-- stylesheet -->
-    <link rel="stylesheet" href="/styles/alt-courses.css" />
+    <link rel="stylesheet" href="styles/alt-courses.css" />
 
     <title>AltSchool-courses</title>
   </head>
