--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
     />
 
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="styles/index.css" />
 
     <title>about me</title>
   </head>
