--- a/media.html
+++ b/media.html
@@ -16,7 +16,7 @@
       type="image/x-icon"
     />
     <!-- stylesheet -->
-    <link rel="stylesheet" href="/styles/media.css" />
+    <link rel="stylesheet" href="styles/media.css" />
 
     <title>html-media</title>
   </head>
