styles not showing

--- a/alt-courses.html
+++ b/alt-courses.html
@@ -28,13 +28,13 @@
         <nav>
           <ul>
             <li>
-              <a href="/index.html">Home</a>
+              <a href="./index.html">Home</a>
             </li>
             <li>
-              <a href="/alt-form.html">Form</a>
+              <a href="./alt-form.html">Form</a>
             </li>
             <li>
-              <a href="/media.html">Media</a>
+              <a href="./media.html">Media</a>
             </li>
           </ul>
         </nav>
