--- a/alt-form.html
+++ b/alt-form.html
@@ -26,13 +26,13 @@
         <nav>
           <ul>
             <li>
-              <a href="/index.html">Home</a>
+              <a href="./index.html">Home</a>
             </li>
             <li>
-              <a href="/alt-courses.html">Courses</a>
+              <a href="./alt-courses.html">Courses</a>
             </li>
             <li>
-              <a href="/media.html">Media</a>
+              <a href="./media.html">Media</a>
             </li>
           </ul>
         </nav>
