--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <nav>
           <ul>
             <li>
-              <a href="/alt-form.html">Form</a>
+              <a href="./alt-form.html">Form</a>
             </li>
             <li>
-              <a href="/alt-courses.html">Courses</a>
+              <a href="./alt-courses.html">Courses</a>
             </li>
             <li>
-              <a href="/media.html">Media</a>
+              <a href="./media.html">Media</a>
             </li>
           </ul>
         </nav>
