--- a/media.html
+++ b/media.html
@@ -28,13 +28,13 @@
         <nav>
           <ul>
             <li>
-              <a href="/index.html">Home</a>
+              <a href="./index.html">Home</a>
             </li>
             <li>
-              <a href="/alt-form.html">Form</a>
+              <a href="./alt-form.html">Form</a>
             </li>
             <li>
-              <a href="/alt-courses.html">Courses</a>
+              <a href="./alt-courses.html">Courses</a>
             </li>
           </ul>
         </nav>
