added ./ to the images for github

--- a/alt-form.html
+++ b/alt-form.html
@@ -45,15 +45,15 @@
         <!-- -------------content box -->
 
         <div class="content-box">
-          <img src="/assets/pictures/signup-img.png" alt="" />
+          <img src="./assets/pictures/signup-img.png" alt="" />
           <h3>Learn highly sought after skills without hassle.</h3>
         </div>
         <footer>
           <div class="icons">
-            <img src="/assets/icons/x.png" alt="" />
-            <img src="/assets/icons/instagram.png" alt="" />
-            <img src="/assets/icons/facebook.png" alt="" />
-            <img src="/assets/icons/linkedin.png" alt="" />
+            <img src="./assets/icons/x.png" alt="" />
+            <img src="./assets/icons/instagram.png" alt="" />
+            <img src="./assets/icons/facebook.png" alt="" />
+            <img src="./assets/icons/linkedin.png" alt="" />
           </div>
           <a href="">tel: 0800ALTSCHOOL</a>
           <span>&copy;2024 AltSchool Africa. All rights reserved.</span>
@@ -63,7 +63,7 @@
       <!-- ------------------------------signup section section-->
       <section class="sign-up-section">
         <div class="alt-logo">
-          <img src="/assets/pictures/alt-school-logo.png" alt="" />
+          <img src="./assets/pictures/alt-school-logo.png" alt="" />
         </div>
         <p class="section-p">
           Already an AltSchooler? <span><a href="">Sign In!</a></span>
