--- a/media.html
+++ b/media.html
@@ -55,18 +55,18 @@
           <picture>
             <source
               media="(min-width: 1020px)"
-              srcset="/assets/pictures/dark-large.webp"
+              srcset="./assets/pictures/dark-large.webp"
             />
             <source
               media="(min-width: 650px)"
-              srcset="/assets/pictures/dark-medium.webp"
+              srcset="./assets/pictures/dark-medium.webp"
             />
             <source
               media="(min-width: 320px)"
-              srcset="/assets/pictures/dark-small.webp"
+              srcset="./assets/pictures/dark-small.webp"
             />
             <img
-              src="/altschool-assignment/assets/pictures/dark--t.jpg"
+              src="./altschool-assignment/assets/pictures/dark--t.jpg"
               alt="A Front-End Dev."
             />
             <figcaption>A Front-End Dev.</figcaption>
@@ -78,10 +78,10 @@
       <section class="media-audio">
         <p>Audio: A beautiful poetry</p>
         <audio controls>
-          <source src="/assets/audio/fine poetry.mp3" type="audio/mp3" />
-          <source src="/assets/audio/fine poetry.mp4" type="audio/mp4" />
-          <source src="/assets/audio/fine poetry.ogg" type="audio/ogg" />
-          <source src="/assets/audio/fine poetry.wav" type="audio/wav" Your
+          <source src="./assets/audio/fine poetry.mp3" type="audio/mp3" />
+          <source src="./assets/audio/fine poetry.mp4" type="audio/mp4" />
+          <source src="./assets/audio/fine poetry.ogg" type="audio/ogg" />
+          <source src="./assets/audio/fine poetry.wav" type="audio/wav" Your
           browser does not support the audio element.
         </audio>
       </section>
@@ -90,9 +90,9 @@
       <section class="media-video">
         <p>Video: A beautiful poetry</p>
         <video controls>
-          <source src="/assets/videos/fine poetry.MP4" type="video/mp4" />
-          <source src="/assets/videos/fine poetry.webm" type="video/webm" />
-          <source src="/assets/videos/fine poetry.ogv" type="video/ogv" />
+          <source src="./assets/videos/fine poetry.MP4" type="video/mp4" />
+          <source src="./assets/videos/fine poetry.webm" type="video/webm" />
+          <source src="./assets/videos/fine poetry.ogv" type="video/ogv" />
           your browser does not support the video element.
         </video>
       </section>
