always use ./ for icons and images

--- a/alt-courses.html
+++ b/alt-courses.html
@@ -12,7 +12,7 @@
     <!-- favicon -->
     <link
       rel="shortcut icon"
-      href="/favicon_io/favicon.ico"
+      href="./favicon_io/favicon.ico"
       type="image/x-icon"
     />
     <!-- stylesheet -->
