--- a/alt-form.html
+++ b/alt-form.html
@@ -10,7 +10,7 @@
     ></script>
     <link
       rel="shortcut icon"
-      href="/favicon_io/favicon.ico"
+      href="./favicon_io/favicon.ico"
       type="image/x-icon"
     />
 
