--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link
       rel="shortcut icon"
-      href="/favicon_io/favicon.ico"
+      href="./favicon_io/favicon.ico"
       type="image/x-icon"
     />
 
