--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- quote section -->
       <section class="quote-section">
         <p class="quote">
-          "Since we cannot <span>change reality</span><br />
+          "Since we cannot <span>change reality,</span><br />
           let us <span>change <br />the eyes which see reality</span>."
         </p>
       </section>
